--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
     - run: echo "Bonjour 👋 "
     - run: ls -l
-    - run: actions/checkout@v2
+    - uses: actions/checkout@v2
     - run: cat README.md
