cowsay install workflow

--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -7,4 +7,5 @@ jobs:
     - run: echo "Bonjour 👋 "
     - run: ls -l
     - uses: actions/checkout@v2
+    - run: sudo apt-get --assume-yes install cowsay
     - run: cat README.md | cowsay dans GitPod
